# fragforge

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  .vercelignore  AGENTS.md  CLAUDE.md  Dockerfile  FACEIT_GUIDE.md  Makefile  PRODUCT.md  QAfrontendissues.md  README.md  SECURITY_AUDIT.md  SECURITY_GOVERNANCE.md  SECURITY_REMEDIATION_WORKFLOW.md  design.md  docker-compose.app.yml  docker-compose.hosted.yml  docker-compose.yml  go.mod  go.sum  issues.md
.atl/: .skill-registry.cache.json  skill-registry.md
.claude/: GUIDE.md  README.md  settings.json
.codex/: GUIDE.md  README.md  config.toml  session-context.md
services/cs2-market/: .gitignore  README.md  pyproject.toml
services/cs2-market/docs/: analytics-boundaries.md
services/cs2-market/frontend/: index.html  package-lock.json  package.json  vite.config.js
services/cs2-market/frontend/src/: App.svelte  main.js  style.css
services/cs2-market/frontend/src/lib/: Heatmap.svelte  KpiStrip.svelte  RecommendationCard.svelte  RiskPanel.svelte
services/cs2-market/src/cs2market/: __init__.py  api.py  backtest.py  cli.py  config.py  features.py  firecrawl.py  historical.py  labels.py  ml.py  models.py  normalize.py  render.py  scoring.py  scripts.py  service.py  sources.py  storage.py
services/cs2-market/src/cs2market/analytics/: __init__.py  dashboard.py  frames.py  numerics.py  plots.py  recommendations.py  types.py
services/cs2-market/tests/: test_analytics_dashboard.py  test_http_render_sources.py  test_ml_pipeline.py  test_normalize.py  test_scoring.py  test_storage_and_scripts.py
(+1175 files in other folders)
