[project]
name = "cs2market"
version = "0.1.0"
description = "CS2 market intelligence service for ZackVideo Shorts signals"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "brotli>=1.1.0",
]

[project.scripts]
cs2market = "cs2market.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cs2market"]
